--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -13,15 +13,15 @@
       class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
     </div>
     <!-- animated blured divs -->
-  <div class="lg:grid lg:grid-cols-12 rounded-3xl ">
+  <div class="lg:grid lg:grid-cols-12 rounded-3xl shadow-lg">
     <section class="header-img relative flex h-40 items-end lg:col-span-5 lg:h-full xl:col-span-6">
-      <img alt="Night" src="../../../../../assets/images/side.jpg"
-        class="absolute inset-0 h-full w-full object-cover brightness-75 lg:rounded-l-3xl " />
+      <img alt="Night" src="../../../../../assets/images/side-void.png"
+        class="absolute inset-0 h-full w-full object-contain  lg:rounded-l-3xl " />
 
       <div class="hidden lg:relative lg:block lg:p-12">
         <a class="block text-white">
           <span class="sr-only">Home</span>
-          <img src="../../../../../assets/images/angular.png" class="h-8 sm:h-10 " alt="">
+          <img src="../../../../../assets/images/angular.png" class="h-8 sm:h-10 shadow-md rounded-full" alt="">
         </a>
 
         <h2 class="mt-6 text-2xl font-bold text-white round text-left sm:text-3xl md:text-4xl bg-black px-2">
