--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -23,16 +23,20 @@
     <!-- Product info -->
     <div
       class="mx-auto max-w-3xl  px-4 pb-16 pt-10 sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8 lg:px-8 lg:pb-24 lg:pt-16 relative">
-      <!-- animated blured divs -->
-      <div
-        class="absolute top-[10%] left-[5%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
-      </div>
-      <div
-        class="absolute top-[25%] right-[5%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
-      </div>
-      <div
-        class="absolute top-[50%] right-[5%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
-      </div>
+    <!-- animated blured divs -->
+    <div
+      class="absolute top-[1%]  left-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+    </div>
+    <div
+      class="absolute top-[15%] right-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
+    </div>
+    <div
+      class="absolute top-[25%] left-[17%] w-60 h-60 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <div
+      class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <!-- animated blured divs -->
       <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8  text-left">
         <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">{{product.name}}</h1>
       </div>
