--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -276,17 +276,17 @@
                         (20)
                       </h2>
                     </div>
-                    <form class="mb-6 ">
+                    <form class="mb-6 flex flex-col">
                       <div
                         class="py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 :bg-gray-800 :border-gray-700">
                         <label for="comment" class="sr-only">Your comment</label>
                         <textarea id="comment" rows="6"
-                          class="px-0 w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none :text-white :placeholder-gray-400 :bg-gray-800"
-                          placeholder="Write a comment..." required></textarea>
+                          class="px-0 text-right w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none :text-white :placeholder-gray-400 :bg-gray-800"
+                          placeholder="اضف تعليقك.." required></textarea>
                       </div>
                       <button type="submit"
-                        class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center  bg-transparent text-black border border-blue-400 rounded-3xl focus:ring-4 focus:ring-primary-200 :focus:ring-primary-900 hover:bg-primary-800">
-                        Post comment
+                        class="inline-block mr-auto py-2.5 px-4  text-xs font-medium text-center  bg-transparent text-black hover:text-white hover:bg-blue-400 border border-blue-400 rounded-3xl focus:ring-4 focus:ring-primary-200 :focus:ring-primary-900 hover:bg-primary-800">
+                      اضافة مراجعة
                       </button>
                     </form>
                     <div class="max-h-64 overflow-y-auto">
