--- a/src/app/pages/index/components/not-found/not-found.component.html
+++ b/src/app/pages/index/components/not-found/not-found.component.html
@@ -3,21 +3,28 @@
     class="container rounded-3xl border-2 border-dashed mx-auto p-10 px-6 md:px-12 relative z-10 flex items-center py-32 xl:py-40">
     <!-- animated blured divs -->
     <div
-      class="absolute top-[10%] left-[5%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+      class="absolute top-[1%]  left-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
     </div>
     <div
-      class="absolute top-[25%] right-[5%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+      class="absolute top-[15%] left-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
     </div>
     <div
-      class="absolute top-[50%] right-[5%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      class="absolute top-[25%] left-[17%] w-60 h-60 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
     </div>
-    <div class="w-full flex flex-col items-center relative z-10">
-                  <h1 class="font-extrabold text-5xl text-center text-gray-600 leading-tight mt-4">
+    <div
+      class="absolute top-[35%] left-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <!-- animated blured divs -->
+    <div class="w-full flex flex-row-reverse items-center relative z-10">
+    
+    
+      <span class="animate-none">
+        <img alt="404" src="../../../../../assets/images/404 – Not Found V1.png"
+          class=" inset-0 h-full w-full object-contain  " />
+      </span>
+      <h1 class="font-extrabold text-5xl text-center text-gray-600 leading-tight mt-4">
         المنتج الذي تحاول الوصول اليه غير موجود
-                  </h1>
-      <p class="font-extrabold text-8xl my-44 text-gray-600 ">
-                       <span> 404 </span> <span class="animate-bounce"> 📡</span>
-                    </p>
+        </h1>
               </div>
         </div>
 </div>
