--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -87,8 +87,8 @@
             <a class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500">117 reviews</a>
           </div>
         </div>
-
-        <form class="mt-10 ">
+        <!-- form  -->
+        <div class="mt-10 ">
           <!-- Colors -->
           <div>
             <h3 class="text-sm font-medium text-gray-900">الالوان المتاحه</h3>
@@ -96,30 +96,18 @@
             <fieldset class="mt-4">
               <legend class="sr-only">Choose a color</legend>
               <div class="flex items-center space-x-3  ">
-                <!--
-                          Active and Checked: "ring ring-offset-1"
-                          Not Active and Checked: "ring-2"
-                        -->
-                <label
-                  class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                  <input type="radio" name="color-choice" value="White" class="sr-only"
-                    aria-labelledby="color-choice-0-label">
-                  <span id="color-choice-0-label" class="sr-only">White</span>
-                  <span aria-hidden="true"
-                    class="h-8 w-8 bg-white rounded-full border border-black border-opacity-10"></span>
-                </label>
-            
-                <label
-                  class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                  <input type="radio" name="color-choice" value="Gray" class="sr-only"
-                    aria-labelledby="color-choice-1-label">
-                  <span id="color-choice-1-label" class="sr-only">Gray</span>
-                  <span aria-hidden="true"
-                    class="h-8 w-8 bg-gray-200 rounded-full border border-black border-opacity-10"></span>
-                </label>
+                  <label [for]="color.name"
+                    class="group relative flex items-center justify-center cursor-pointer rounded-full ring-gray-100 ring-offset-purple-100  ring-2 "
+                    *ngFor="let color of product.colors">
+                    <input type="checkbox" [name]="color.name" [id]="color.name" [value]="color.name" (change)="handleColorChange($event)"
+                      class="sr-only">
+                    <span [ngClass]="(color.name=== 'black' || color.name=== 'black')? 'bg-'+color.name: 'bg-'+color.name+'-100'"
+                      class="h-8 w-8 rounded-full border border-black border-opacity-10"></span>
+                  </label>
               </div>
             </fieldset>
           </div>
+          <p class="flex bg-gray-100">selected: {{productCardForm.get('colors')?.value|json}}</p>
 
           <!-- Sizes -->
           <div class="mt-10">
@@ -131,110 +119,20 @@
             <fieldset class="mt-4">
               <legend class="sr-only">Choose a size</legend>
               <div class="grid grid-cols-4 gap-4 sm:grid-cols-8 lg:grid-cols-4">
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-not-allowed bg-gray-50 text-gray-200">
-                  <input type="radio" name="size-choice" value="XXS" disabled class="sr-only"
-                    aria-labelledby="size-choice-0-label">
-                  <span id="size-choice-0-label">XXS</span>
-                  <span aria-hidden="true"
-                    class="pointer-events-none absolute -inset-px rounded-md border-2 border-gray-200">
-                    <svg class="absolute inset-0 h-full w-full stroke-2 text-gray-200" viewBox="0 0 100 100"
-                      preserveAspectRatio="none" stroke="currentColor">
-                      <line x1="0" y1="100" x2="100" y2="0" vector-effect="non-scaling-stroke" />
-                    </svg>
-                  </span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="XS" class="sr-only"
-                    aria-labelledby="size-choice-1-label">
-                  <span id="size-choice-1-label">XS</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="S" class="sr-only"
-                    aria-labelledby="size-choice-2-label">
-                  <span id="size-choice-2-label">S</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="M" class="sr-only"
-                    aria-labelledby="size-choice-3-label">
-                  <span id="size-choice-3-label">M</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="L" class="sr-only"
-                    aria-labelledby="size-choice-4-label">
-                  <span id="size-choice-4-label">L</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="XL" class="sr-only"
-                    aria-labelledby="size-choice-5-label">
-                  <span id="size-choice-5-label">XL</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="2XL" class="sr-only"
-                    aria-labelledby="size-choice-6-label">
-                  <span id="size-choice-6-label">2XL</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
-                <!-- Active: "ring-2 ring-indigo-500" -->
-                <label
-                  class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 cursor-pointer bg-white text-gray-900 shadow-sm">
-                  <input type="radio" name="size-choice" value="3XL" class="sr-only"
-                    aria-labelledby="size-choice-7-label">
-                  <span id="size-choice-7-label">3XL</span>
-                  <!--
-                            Active: "border", Not Active: "border-2"
-                            Checked: "border-indigo-500", Not Checked: "border-transparent"
-                          -->
-                  <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
-                </label>
+                  <label [for]="size.name" *ngFor="let size of product.sizes" [for]="size.name"
+                    class="group relative flex items-center justify-center rounded-md border py-3 px-4 text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 cursor-pointer bg-white text-gray-900 shadow-sm">
+                    <input type="checkbox" [name]="size.name" [id]="size.name" [value]="size.name" class="sr-only"
+                      (change)="handleSizeChange($event)">
+                    <span id="size-label">{{size.name}}</span>
+                    <span class="pointer-events-none absolute -inset-px rounded-md" aria-hidden="true"></span>
+                  </label>
               </div>
             </fieldset>
           </div>
+          <p class="flex bg-gray-100">selected: {{productCardForm.get('sizes')?.value|json}}</p>
 
           <button 
-            class="add-to-cart-button mt-10 flex w-full items-center justify-center rounded-3xl border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" (click)=" postCartItem(product)">اضافة الى السلة</button>
+            class="add-to-cart-button mt-10 flex w-full items-center justify-center rounded-3xl border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" (click)="postCartItem(product)">اضافة الى السلة</button>
           <a routerLink="/index" class="inline-flex items-center font-medium text-lg  my-4 mr-auto  w-full hover:underline ">
             متابعة التصفح
             <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
@@ -242,7 +140,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
             </svg>
           </a>
-        </form>
+        </div>
+        <!-- form  -->
       </div>
       <!-- Product details -->
       <div class="py-10  lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pb-16 lg:pr-8 lg:pt-6">
@@ -502,3 +401,8 @@
           </div>
 </div>
 <app-footer></app-footer>
+<!-- Toast -->
+<app-toast *ngIf="showWarnToast" (dismiss)="toggleWarnToast()" toastType="warning"
+  [toastMessage]="toastWarnMessage"></app-toast>
+<app-toast *ngIf="showErrToast" (dismiss)="toggleErrToast()" toastType="error"
+  [toastMessage]="toastErrMessage"></app-toast>
