--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -47,7 +47,7 @@
         <p class="text-3xl tracking-tight text-gray-900">${{product.price}}</p>
 
         <!-- Reviews -->
-        <app-product-reviews></app-product-reviews>
+        <app-product-reviews [reviews]="product.reviews"></app-product-reviews>
         <!-- Reviews -->
         <!-- form  -->
         <div class="mt-10 ">
