--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -129,7 +129,8 @@
               <!-- Product details -->
               <!-- Product Comments  -->
               <!-- -->
-              <app-product-comments class="lg:col-span-2 lg:col-start-1"></app-product-comments>
+              <app-product-comments class="lg:col-span-2 lg:col-start-1" [reviews]="product.reviews"
+                [productId]="product.id"></app-product-comments>
               <!-- Product Comments  -->
 
           </div>
