--- a/src/app/pages/index/views/product-comments/product-comments.component.html
+++ b/src/app/pages/index/views/product-comments/product-comments.component.html
@@ -1,62 +1,79 @@
 <div class="py-5   lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pb-16  lg:pt-6">
   <section class=" py-8 lg:py-16">
     <div class=" mx-auto px-4">
-      <div class="mb-6 flex flex-row-reverse justify-between">
+      <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()" class="mb-6 ">
+        <div class="flex flex-row-reverse justify-between">
         <h2 class="text-lg lg:text-2xl font-bold text-gray-900 ">
           <span>التعليقات</span>
           ({{reviews.length}})
         </h2>
         <div class="flex items-center">
-          <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor" viewBox="0 0 20 20"
+        <div>
+          <input type="radio" name="rating" value="1" formControlName="rating" class="sr-only">
+          <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+              viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <title>First star</title>
             <path
               d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
             </path>
-          </svg>
-          <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor" viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg">
-            <title>Second star</title>
-            <path
-              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
-            </path>
-          </svg>
-          <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor" viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg">
-            <title>Third star</title>
-            <path
-              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
-            </path>
-          </svg>
-          <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor" viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg">
-            <title>Fourth star</title>
-            <path
-              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
-            </path>
-          </svg>
-          <svg aria-hidden="true" class="w-10 h-10 text-gray-300 dark:text-gray-500" fill="currentColor" viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg">
-            <title>Fifth star</title>
-            <path
-              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
-            </path>
-          </svg>
-        </div>
-      </div>
-      <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()" class="mb-6 flex flex-col">
-        <div
-          class="py-2 px-4 mb-4 bg-white rounded-3xl border border-gray-200 ">
-          <label for="review" class="sr-only">Your comment</label>
-          <textarea formControlName="review" id="review" rows="6"
-            class="px-0 text-right w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none "
-            placeholder="اضف تعليقك.." required></textarea>
-        </div>
-        <button type="submit"
-          class="inline-block mr-auto py-2.5 px-4  text-xs font-medium text-center  bg-transparent text-black hover:text-white hover:bg-blue-400 border border-blue-400 rounded-3xl focus:ring-4 focus:ring-primary-200 :focus:ring-primary-900 hover:bg-primary-800">
-          اضافة مراجعة
-        </button>
-      </form>
+          </svg></label>
+          </div>
+          <div>
+            <input type="radio" name="rating" value="2" formControlName="rating" class="sr-only">
+            <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <title>First star</title>
+                <path
+                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
+                </path>
+              </svg></label>
+              </div>
+              <div>
+                <input type="radio" name="rating" value="3" formControlName="rating" class="sr-only">
+                <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <title>First star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
+                    </path>
+                </svg></label>
+                </div>
+                <div>
+                  <input type="radio" name="rating" value="4" formControlName="rating" class="sr-only">
+                  <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                      viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                      <title>First star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
+                      </path>
+                </svg></label>
+                </div>
+                <div>
+                  <input type="radio" name="rating" value="5" formControlName="rating" class="sr-only">
+                  <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                      viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                      <title>First star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
+                      </path>
+                      </svg></label>
+                      </div>
+                      </div>
+                      </div>
+                      <div class="mb-6 flex flex-col">
+                        <div class="py-2 px-4 mb-4 bg-white rounded-3xl border border-gray-200 ">
+                          <label for="review" class="sr-only">Your comment</label>
+                          <textarea formControlName="review" id="review" rows="6"
+                            class="px-0 text-right w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none "
+                            placeholder="اضف تعليقك.." required></textarea>
+                        </div>
+                        <button type="submit"
+                          class="inline-block mr-auto py-2.5 px-4  text-xs font-medium text-center  bg-transparent text-black hover:text-white hover:bg-blue-400 border border-blue-400 rounded-3xl focus:ring-4 focus:ring-primary-200 :focus:ring-primary-900 hover:bg-primary-800">
+                          اضافة مراجعة
+                        </button>
+            </div>
+            </form>
       <div class="max-h-96 overflow-y-auto">
         <article class="p-6 mb-6 text-base bg-white rounded-3xl " *ngFor="let review of reviews;let i = index">
           <footer class="flex justify-between items-center mb-2 ">
