--- a/src/app/pages/auth/components/signup/signup.component.html
+++ b/src/app/pages/auth/components/signup/signup.component.html
@@ -169,7 +169,7 @@
             </svg>
             Sign in with Facebook
           </button>
-          <button type="button"
+          <button type="button" (click)="loginWithGoogle()"
             class="mx-auto text-white bg-[#4285F4] hover:bg-[#4285F4]/90 focus:ring-4 focus:outline-none focus:ring-[#4285F4]/50 font-medium rounded-3xl text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#4285F4]/55 mb-2">
             <svg class="w-4 h-4 mr-2 -ml-1" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512">
